<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.InformativeFragments.GraphDescriptionFragment">


    <TextView
        android:id="@+id/DataDescriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Data"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/DataDescription"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/DataDescription"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/DataDescriptionTitle"
        app:layout_constraintTop_toBottomOf="@+id/DataDescriptionTitle" />

    <TextView
        android:id="@+id/UnitsDescriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Enheder"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/DataDescription"
        app:layout_constraintTop_toBottomOf="@+id/DataDescription" />

    <TextView
        android:id="@+id/UnitsDescription"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/UnitsDescription"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/UnitsDescriptionTitle"
        app:layout_constraintTop_toBottomOf="@+id/UnitsDescriptionTitle" />

    <TextView
        android:id="@+id/LimitsDescriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Grænseværdier"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/UnitsDescription"
        app:layout_constraintTop_toBottomOf="@+id/UnitsDescription" />


    <TextView
        android:id="@+id/LimitsDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/LimitsDescription"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/LimitsDescriptionTitle"
        app:layout_constraintTop_toBottomOf="@+id/LimitsDescriptionTitle" />


    <TextView
        android:id="@+id/FunctionalityDescriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Funktioner"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/UnitsDescription"
        app:layout_constraintTop_toBottomOf="@+id/LimitsDescription" />

    <TextView
        android:id="@+id/FunctionalityDescription"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/FunctionalityDescription"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/FunctionalityDescriptionTitle"
        app:layout_constraintTop_toBottomOf="@+id/FunctionalityDescriptionTitle" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="245dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/period_selection_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FunctionalityPeriodButtonsDescription" />

    <TextView
        android:id="@+id/FunctionalityDataTypeButtonsDescription"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/DataTypeButtonsDescription"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/FunctionalityPeriodButtonsDescription"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/FunctionalityPeriodButtonsDescription"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/PeriodButtonsDescription"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/FunctionalityDescription"
        app:layout_constraintTop_toBottomOf="@+id/FunctionalityDescription" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="238dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/data_types_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FunctionalityDataTypeButtonsDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>